test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meso-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meso-web
                port:
                  number: 3000
          - path: /coeweather
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-nick-php
                port:
                  number: 80
  tls:
    - hosts:
      - test.asrc.albany.edu
